# OCR

./: .dockerignore  Dockerfile  README.md  model_inference.py  pyproject.toml
app/: tools.py
app/static/: script.js
langgraph-chroma-api/: .env.example  docker-compose.yml  run.py
langgraph-chroma-api/app/: agent.py  main.py  vector_store.py
langgraph-chroma-api/app/static/: index.html  style.css
